tests/NormalTests/paczka1/fuzzy1/38108218.err
Error in line 2: s8I6S6 A508 69,0
Error in line 9: S887 S390 85,0
Error in line 20: fVk S72d 78,d
Error in line 17: fVk S887 72,3
Error in line 19: e8AYo S887 15,3
Error in line 26: OGuA2v S390 21,4
Error in line 21: VyQ198mjM S390 45,9
